refactor: update response success register
