# apps/api/internal/users/model.go
@@ -8,6 +8,13 @@ type RegisterRequest struct {
 	Email    string `json:"email"`
 }
 
+type UserResponse struct {
+	ID       int64  `json:"id"`
+	Username string `json:"username"`
+	Email    string `json:"email"`
+	Link     string `json:"link"`
+}
+
 var (
 	ErrEmailExists      = errors.New("email already exists")
 	ErrUsernameExists   = errors.New("username already exists")
